# claude-code-helper-with-codex

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.ko.md  README.md  install.ps1  install.sh  plan.md  pyproject.toml  run.py
src/cchwc/: __init__.py  _bg_serve.py  cli.py  config.py  i18n.py  mcp_server.py  server_runner.py  setup_wizard.py
src/cchwc/adapters/: base.py  claude_adapter.py  codex_adapter.py
src/cchwc/core/: db.py  models.py  paths.py  schemas.py
src/cchwc/daemon/: runner.py
src/cchwc/indexer/: parser.py  scanner.py  watcher.py
src/cchwc/orchestrator/: claude_runner.py  codex_runner.py  judge.py  runner.py
src/cchwc/orchestrator/modes/: base.py  compare.py  debate.py  review.py
src/cchwc/server/: app.py  deps.py  usage_status.py
src/cchwc/server/routers/: __init__.py  fs.py  orchestrate.py  pages.py  search.py  sessions.py  settings.py  tokens.py
src/cchwc/server/templates/: 404.html  base.html  dashboard.html  settings.html
src/cchwc/server/templates/orchestrate/: _runs_list.html  index.html
src/cchwc/server/templates/sessions/: detail.html  list.html  partial_rows.html
src/cchwc/server/templates/tokens/: dashboard.html
tests/: conftest.py
tests/fixtures/: sample_claude_session.jsonl  sample_codex_session.jsonl
tests/unit/: test_claude_adapter.py  test_cli_install.py  test_codex_adapter.py  test_config.py  test_orchestrator_runners.py  test_parser.py  test_server.py  test_usage_status.py
